add hero, advantages, about sections (1920px)

--- a/src/index.html
+++ b/src/index.html
@@ -50,11 +50,130 @@
               </li>
             </ul>
           </nav>
-          <button class="header__btn" type="button">Login</button>
+          <a class="header__btn" href="#">Login</a>
         </div>
       </div>
     </header>
-
+    <main class="main">
+      <section class="s-hero">
+        <div class="container">
+          <div class="s-hero__inner">
+            <div class="s-hero__info">
+              <h2 class="s-hero__title">Welcome to</h2>
+              <h1 class="s-hero__title s-hero__title--main">
+                Dickens Executive Coaching Academy
+              </h1>
+              <p class="s-hero__text">
+                Your resource of choice for coaching education
+              </p>
+              <a class="s-hero__btn" href="#">Explore Courses</a>
+            </div>
+            <img class="s-hero__img" src="images/hero.jpg" alt="image" />
+          </div>
+        </div>
+      </section>
+      <section class="s-advantages">
+        <div class="container">
+          <div class="s-advantages__box-title">
+            <h2 class="s-advantages__title">Advantages</h2>
+          </div>
+          <ul class="s-advantages__list">
+            <li class="s-advantages__item">
+              <img
+                class="s-advantages__item-img"
+                src="images/advantages/launch.svg"
+                alt="icon"
+              />
+              <h3 class="s-advantages__item-title">
+                Launch Your Coaching Career
+              </h3>
+              <p class="s-advantages__item-text">
+                A comprehensive course track to ICF credentialing
+              </p>
+            </li>
+            <li class="s-advantages__item">
+              <img
+                class="s-advantages__item-img"
+                src="images/advantages/coaching.svg"
+                alt="icon"
+              />
+              <h3 class="s-advantages__item-title">
+                Coaching in the workplace
+              </h3>
+              <p class="s-advantages__item-text">
+                Serve as a thought leader within your organization
+              </p>
+            </li>
+            <li class="s-advantages__item">
+              <img
+                class="s-advantages__item-img"
+                src="images/advantages/education.svg"
+                alt="icon"
+              />
+              <h3 class="s-advantages__item-title">
+                Continuing Coaching Education
+              </h3>
+              <p class="s-advantages__item-text">
+                Beginner or a seasoned pro, you'll find a course right for you
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="s-about">
+        <div class="container">
+          <div class="s-about__box-title">
+            <h2 class="s-about__title">About us</h2>
+            <a class="details-link" href="#">Learn more</a>
+          </div>
+          <div class="s-about__inner">
+            <img class="s-about__img" src="images/about.jpg" alt="image" />
+            <div class="s-about__info">
+              <div class="s-about__box">
+                <h3 class="s-about__box-title">
+                  Hi, we’re Dickens Executive Coaching Academy
+                </h3>
+                <p class="s-about__box-text">
+                  Lorem ipsum dolor sit amet consectetur. Odio nec dictum tortor
+                  id proin rhoncus elit. Orci lacus pellentesque ultrices ut
+                  aliquet non fusce faucibus dictumst. Massa sit aliquam quam
+                  urna nam. Maecenas massa varius scelerisque pellentesque.
+                  Vestibulum ut rhoncus iaculis eleifend. Euismod cras et tortor
+                  at pellentesque duis cursus donec.
+                </p>
+              </div>
+              <div class="s-about__box s-about__box--stats">
+                <p class="s-about__box-title">5+</p>
+                <p class="s-about__box-text">years on the educational market</p>
+              </div>
+              <div class="s-about__box s-about__box--stats">
+                <p class="s-about__box-title">1000+</p>
+                <p class="s-about__box-text">successful graduates</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="s-courses">
+        <div class="container">
+          <h2 class="s-courses__title">Our courses</h2>
+          <ul class="s-courses__list">
+            <li class="s-courses__item course">
+              <div class="course__title-box">
+                <img class="course__img" src="images/course-icon.svg" alt="icon" />
+                <h4 class="course__title">
+                  Level 1 (ACC Track) Experiential Executive Coaching Program
+                </h4>
+                <a class="details-link" href="#">Details</a>
+              </div>
+              <div class="course__short-info"></div>
+              <div class="course__main-info"></div>
+              <a class="course__btn" href="#">Join</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <script src="js/script.min.js"></script>
   </body>
 </html>
