add courses section

--- a/src/index.html
+++ b/src/index.html
@@ -160,14 +160,272 @@
           <ul class="s-courses__list">
             <li class="s-courses__item course">
               <div class="course__title-box">
-                <img class="course__img" src="images/course-icon.svg" alt="icon" />
+                <img
+                  class="course__img"
+                  src="images/courses/course-icon.svg"
+                  alt="icon"
+                />
                 <h4 class="course__title">
                   Level 1 (ACC Track) Experiential Executive Coaching Program
                 </h4>
                 <a class="details-link" href="#">Details</a>
               </div>
-              <div class="course__short-info"></div>
-              <div class="course__main-info"></div>
+              <div class="course__short-info">
+                <div class="course__short-info-item">
+                  <img
+                    class="course__short-info-img"
+                    src="images/courses/clock.svg"
+                    alt="icon"
+                  />
+                  <p class="course__short-info-text">60-hour</p>
+                </div>
+                <div class="course__short-info-item">
+                  <img
+                    class="course__short-info-img"
+                    src="images/courses/online.svg"
+                    alt="icon"
+                  />
+                  <p class="course__short-info-text">Online</p>
+                </div>
+                <div class="course__short-info-item">
+                  <img
+                    class="course__short-info-img"
+                    src="images/courses/language.svg"
+                    alt="icon"
+                  />
+                  <p class="course__short-info-text">English</p>
+                </div>
+              </div>
+              <div class="course__main-info">
+                <h4 class="course__main-info-title">
+                  The Three Primary Coaching Program Models:
+                </h4>
+                <ul class="course__main-info-list">
+                  <li class="course__main-info-item">
+                    <h5 class="course__main-info-item-title">
+                      Level 1 (ACC Track) Experiential Executive Coaching
+                      Program
+                    </h5>
+                    <ul class="course__main-info-sublist">
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          In-depth exploration of coaching foundations
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Mastery in effective communication strategies
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Proficiency in navigating ICF Core Competencies
+                        </p>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="course__main-info-item">
+                    <h5 class="course__main-info-item-title">
+                      Level 1 (ACC Track) Experiential Executive Coaching
+                      Program
+                    </h5>
+                    <ul class="course__main-info-sublist">
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Illustrates how coaching candidates acquire the
+                          necessary skills, tips, tools, and techniques for
+                          certification
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Progresses from data intake to knowledge acquisition,
+                          understanding, and ultimately wisdom
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Through practice and repetition, candidates achieve
+                          competence and transcendence in their coaching
+                          abilities
+                        </p>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="course__main-info-item">
+                    <h5 class="course__main-info-item-title">
+                      3.The Coaching Engagement Model
+                    </h5>
+                    <ul class="course__main-info-sublist">
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Provides a structured framework for coaching sessions
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Guides coaches and clients through phases of
+                          awareness, discovery, goal setting, approach
+                          determination, progress tracking, and success
+                          evaluation
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Serves as a roadmap for the engagement, fostering
+                          clarity and mutual expectations between coach and
+                          client
+                        </p>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+                <div class="course__main-info-price">
+                  <span class="course__main-info-price-title">Price</span>
+                  <div class="course__main-info-price-devider"></div>
+                  <span class="course__main-info-price-value">$6 499</span>
+                </div>
+              </div>
+              <a class="course__btn" href="#">Join</a>
+            </li>
+            <li class="s-courses__item course">
+              <div class="course__title-box">
+                <img
+                  class="course__img"
+                  src="images/courses/course-icon.svg"
+                  alt="icon"
+                />
+                <h4 class="course__title">
+                  Level 2 (PCC Track) Experiential Executive Coaching Program
+                </h4>
+                <a class="details-link" href="#">Details</a>
+              </div>
+              <div class="course__short-info">
+                <div class="course__short-info-item">
+                  <img
+                    class="course__short-info-img"
+                    src="images/courses/clock.svg"
+                    alt="icon"
+                  />
+                  <p class="course__short-info-text">125 hours</p>
+                </div>
+                <div class="course__short-info-item">
+                  <img
+                    class="course__short-info-img"
+                    src="images/courses/modules.svg"
+                    alt="icon"
+                  />
+                  <p class="course__short-info-text">9 modules</p>
+                </div>
+                <div class="course__short-info-item">
+                  <img
+                    class="course__short-info-img"
+                    src="images/courses/online.svg"
+                    alt="icon"
+                  />
+                  <p class="course__short-info-text">Online</p>
+                </div>
+                <div class="course__short-info-item">
+                  <img
+                    class="course__short-info-img"
+                    src="images/courses/language.svg"
+                    alt="icon"
+                  />
+                  <p class="course__short-info-text">English</p>
+                </div>
+              </div>
+              <div class="course__main-info">
+                <h4 class="course__main-info-title">
+                  The Three Primary Coaching Program Models:
+                </h4>
+                <ul class="course__main-info-list">
+                  <li class="course__main-info-item">
+                    <h5 class="course__main-info-item-title">
+                      1.The Coaching Certification Model
+                    </h5>
+                    <ul class="course__main-info-sublist">
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          The program offers three pathways to proficiency:
+                          coaching, receiving coaching, or observing coaching
+                          sessions
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Emphasizes three core areas: ICF Ethics, ICF
+                          Regulations, and ICF Core Competencies
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Candidates focus on enhancing skills in performance
+                          coaching, behavioral coaching, and perceptual coaching
+                        </p>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="course__main-info-item">
+                    <h5 class="course__main-info-item-title">
+                      2.The Coach’s Learning Model
+                    </h5>
+                    <ul class="course__main-info-sublist">
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Illustrates how coaching candidates acquire the
+                          necessary skills, tips, tools, and techniques for
+                          certification
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Progresses from data intake to knowledge acquisition,
+                          understanding, and ultimately wisdom
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Through practice and repetition, candidates achieve
+                          competence and transcendence in their coaching
+                          abilities
+                        </p>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="course__main-info-item">
+                    <h5 class="course__main-info-item-title">
+                      3.The Coaching Engagement Model
+                    </h5>
+                    <ul class="course__main-info-sublist">
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Provides a structured framework for coaching sessions
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Guides coaches and clients through phases of
+                          awareness, discovery, goal setting, approach
+                          determination, progress tracking, and success
+                          evaluation
+                        </p>
+                      </li>
+                      <li class="course__main-info-subitem">
+                        <p class="course__main-info-subitem-text">
+                          Serves as a roadmap for the engagement, fostering
+                          clarity and mutual expectations between coach and
+                          client
+                        </p>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+                <div class="course__main-info-price">
+                  <span class="course__main-info-price-title">Price</span>
+                  <div class="course__main-info-price-devider"></div>
+                  <span class="course__main-info-price-value">$8 499</span>
+                </div>
+              </div>
               <a class="course__btn" href="#">Join</a>
             </li>
           </ul>
