add promo section

--- a/src/index.html
+++ b/src/index.html
@@ -431,6 +431,26 @@
           </ul>
         </div>
       </section>
+      <section class="s-promo">
+        <div class="container">
+          <div class="s-promo__inner">
+            <div class="s-promo__info">
+              <h2 class="s-promo__title">
+                Companies, universities, directors and presidents
+              </h2>
+              <p class="s-promo__text">
+                If you'd like to learn more information about our work with
+                large organizations, let's schedule a call.
+              </p>
+            </div>
+            <form class="form s-promo__form" action="#">
+              <input class="form__input" type="text" placeholder="Name" />
+              <input class="form__input" type="email" placeholder="Email" />
+              <button class="form__btn" type="submit">Schedule a call</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="js/script.min.js"></script>
   </body>
