add testimonials section, swiper (1920px)

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
               </li>
             </ul>
           </nav>
-          <a class="header__btn" href="#">Login</a>
+          <a class="btn" href="#">Login</a>
         </div>
       </div>
     </header>
@@ -66,7 +66,7 @@
               <p class="s-hero__text">
                 Your resource of choice for coaching education
               </p>
-              <a class="s-hero__btn" href="#">Explore Courses</a>
+              <a class="btn s-hero__btn" href="#">Explore Courses</a>
             </div>
             <img class="s-hero__img" src="images/hero.jpg" alt="image" />
           </div>
@@ -75,7 +75,7 @@
       <section class="s-advantages">
         <div class="container">
           <div class="s-advantages__box-title">
-            <h2 class="s-advantages__title">Advantages</h2>
+            <h2 class="s-title">Advantages</h2>
           </div>
           <ul class="s-advantages__list">
             <li class="s-advantages__item">
@@ -123,7 +123,7 @@
       <section class="s-about">
         <div class="container">
           <div class="s-about__box-title">
-            <h2 class="s-about__title">About us</h2>
+            <h2 class="s-title">About us</h2>
             <a class="details-link" href="#">Learn more</a>
           </div>
           <div class="s-about__inner">
@@ -156,7 +156,7 @@
       </section>
       <section class="s-courses">
         <div class="container">
-          <h2 class="s-courses__title">Our courses</h2>
+          <h2 class="s-title s-courses__title">Our courses</h2>
           <ul class="s-courses__list">
             <li class="s-courses__item course">
               <div class="course__title-box">
@@ -286,7 +286,7 @@
                   <span class="course__main-info-price-value">$6 499</span>
                 </div>
               </div>
-              <a class="course__btn" href="#">Join</a>
+              <a class="btn course__btn" href="#">Join</a>
             </li>
             <li class="s-courses__item course">
               <div class="course__title-box">
@@ -426,7 +426,7 @@
                   <span class="course__main-info-price-value">$8 499</span>
                 </div>
               </div>
-              <a class="course__btn" href="#">Join</a>
+              <a class="btn course__btn" href="#">Join</a>
             </li>
           </ul>
         </div>
@@ -435,7 +435,7 @@
         <div class="container">
           <div class="s-promo__inner">
             <div class="s-promo__info">
-              <h2 class="s-promo__title">
+              <h2 class="s-title s-promo__title">
                 Companies, universities, directors and presidents
               </h2>
               <p class="s-promo__text">
@@ -446,8 +446,376 @@
             <form class="form s-promo__form" action="#">
               <input class="form__input" type="text" placeholder="Name" />
               <input class="form__input" type="email" placeholder="Email" />
-              <button class="form__btn" type="submit">Schedule a call</button>
+              <button class="btn form__btn" type="submit">
+                Schedule a call
+              </button>
             </form>
+          </div>
+        </div>
+      </section>
+      <section class="s-testimonials">
+        <div class="container">
+          <h2 class="s-title s-testimonials__title">Testimonials</h2>
+          <div class="swiper s-testimonials__slider">
+            <div class="swiper-wrapper">
+              <div class="s-testimonials__slide swiper-slide">
+                <img
+                  class="s-testimonials__slide-img"
+                  src="images/testimonials/person-1.jpg"
+                  alt="image"
+                />
+                <div class="s-testimonials__slide-info">
+                  <h6 class="s-testimonials__slide-name">Name</h6>
+                  <p class="s-testimonials__slide-role">Name</p>
+                  <div class="s-testimonials__slide-stars">
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                  </div>
+                  <p class="s-testimonials__slide-text">
+                    Lorem ipsum dolor sit amet consectetur. Sed commodo lorem
+                    sit nec ut. Habitant mattis in vitae sagittis maecenas sed.
+                    Sed sit posuere sed sit rhoncus. Nunc leo eu volutpat
+                    laoreet est arcu odio vitae egestas. Porttitor urna.
+                  </p>
+                </div>
+              </div>
+              <div class="s-testimonials__slide swiper-slide">
+                <img
+                  class="s-testimonials__slide-img"
+                  src="images/testimonials/person-2.jpg"
+                  alt="image"
+                />
+                <div class="s-testimonials__slide-info">
+                  <h6 class="s-testimonials__slide-name">Name</h6>
+                  <p class="s-testimonials__slide-role">Name</p>
+                  <div class="s-testimonials__slide-stars">
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                  </div>
+                  <p class="s-testimonials__slide-text">
+                    Lorem ipsum dolor sit amet consectetur. Sed commodo lorem
+                    sit nec ut. Habitant mattis in vitae sagittis maecenas sed.
+                    Sed sit posuere sed sit rhoncus. Nunc leo eu volutpat
+                    laoreet est arcu odio vitae egestas. Porttitor urna.
+                  </p>
+                </div>
+              </div>
+              <div class="s-testimonials__slide swiper-slide">
+                <img
+                  class="s-testimonials__slide-img"
+                  src="images/testimonials/person-1.jpg"
+                  alt="image"
+                />
+                <div class="s-testimonials__slide-info">
+                  <h6 class="s-testimonials__slide-name">Name</h6>
+                  <p class="s-testimonials__slide-role">Name</p>
+                  <div class="s-testimonials__slide-stars">
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                  </div>
+                  <p class="s-testimonials__slide-text">
+                    Lorem ipsum dolor sit amet consectetur. Sed commodo lorem
+                    sit nec ut. Habitant mattis in vitae sagittis maecenas sed.
+                    Sed sit posuere sed sit rhoncus. Nunc leo eu volutpat
+                    laoreet est arcu odio vitae egestas. Porttitor urna.
+                  </p>
+                </div>
+              </div>
+              <div class="s-testimonials__slide swiper-slide">
+                <img
+                  class="s-testimonials__slide-img"
+                  src="images/testimonials/person-2.jpg"
+                  alt="image"
+                />
+                <div class="s-testimonials__slide-info">
+                  <h6 class="s-testimonials__slide-name">Name</h6>
+                  <p class="s-testimonials__slide-role">Name</p>
+                  <div class="s-testimonials__slide-stars">
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                  </div>
+                  <p class="s-testimonials__slide-text">
+                    Lorem ipsum dolor sit amet consectetur. Sed commodo lorem
+                    sit nec ut. Habitant mattis in vitae sagittis maecenas sed.
+                    Sed sit posuere sed sit rhoncus. Nunc leo eu volutpat
+                    laoreet est arcu odio vitae egestas. Porttitor urna.
+                  </p>
+                </div>
+              </div>
+              <div class="s-testimonials__slide swiper-slide">
+                <img
+                  class="s-testimonials__slide-img"
+                  src="images/testimonials/person-1.jpg"
+                  alt="image"
+                />
+                <div class="s-testimonials__slide-info">
+                  <h6 class="s-testimonials__slide-name">Name</h6>
+                  <p class="s-testimonials__slide-role">Name</p>
+                  <div class="s-testimonials__slide-stars">
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                  </div>
+                  <p class="s-testimonials__slide-text">
+                    Lorem ipsum dolor sit amet consectetur. Sed commodo lorem
+                    sit nec ut. Habitant mattis in vitae sagittis maecenas sed.
+                    Sed sit posuere sed sit rhoncus. Nunc leo eu volutpat
+                    laoreet est arcu odio vitae egestas. Porttitor urna.
+                  </p>
+                </div>
+              </div>
+              <div class="s-testimonials__slide swiper-slide">
+                <img
+                  class="s-testimonials__slide-img"
+                  src="images/testimonials/person-2.jpg"
+                  alt="image"
+                />
+                <div class="s-testimonials__slide-info">
+                  <h6 class="s-testimonials__slide-name">Name</h6>
+                  <p class="s-testimonials__slide-role">Name</p>
+                  <div class="s-testimonials__slide-stars">
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                  </div>
+                  <p class="s-testimonials__slide-text">
+                    Lorem ipsum dolor sit amet consectetur. Sed commodo lorem
+                    sit nec ut. Habitant mattis in vitae sagittis maecenas sed.
+                    Sed sit posuere sed sit rhoncus. Nunc leo eu volutpat
+                    laoreet est arcu odio vitae egestas. Porttitor urna.
+                  </p>
+                </div>
+              </div>
+              <div class="s-testimonials__slide swiper-slide">
+                <img
+                  class="s-testimonials__slide-img"
+                  src="images/testimonials/person-1.jpg"
+                  alt="image"
+                />
+                <div class="s-testimonials__slide-info">
+                  <h6 class="s-testimonials__slide-name">Name</h6>
+                  <p class="s-testimonials__slide-role">Name</p>
+                  <div class="s-testimonials__slide-stars">
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                  </div>
+                  <p class="s-testimonials__slide-text">
+                    Lorem ipsum dolor sit amet consectetur. Sed commodo lorem
+                    sit nec ut. Habitant mattis in vitae sagittis maecenas sed.
+                    Sed sit posuere sed sit rhoncus. Nunc leo eu volutpat
+                    laoreet est arcu odio vitae egestas. Porttitor urna.
+                  </p>
+                </div>
+              </div>
+              <div class="s-testimonials__slide swiper-slide">
+                <img
+                  class="s-testimonials__slide-img"
+                  src="images/testimonials/person-2.jpg"
+                  alt="image"
+                />
+                <div class="s-testimonials__slide-info">
+                  <h6 class="s-testimonials__slide-name">Name</h6>
+                  <p class="s-testimonials__slide-role">Name</p>
+                  <div class="s-testimonials__slide-stars">
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                    <img
+                      class="s-testimonials__slide-star"
+                      src="images/star.svg"
+                      alt="star icon"
+                    />
+                  </div>
+                  <p class="s-testimonials__slide-text">
+                    Lorem ipsum dolor sit amet consectetur. Sed commodo lorem
+                    sit nec ut. Habitant mattis in vitae sagittis maecenas sed.
+                    Sed sit posuere sed sit rhoncus. Nunc leo eu volutpat
+                    laoreet est arcu odio vitae egestas. Porttitor urna.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="s-testimonials__controls">
+              <div class="s-testimonials__btn-prev"></div>
+              <div class="swiper-pagination"></div>
+              <div class="s-testimonials__btn-next"></div>
+            </div>
           </div>
         </div>
       </section>
